feat: added spawners ranking