@@ -1,93 +1,58 @@
 package blizzard.development.spawners.inventories.ranking.items;
-
-import blizzard.development.spawners.database.cache.managers.SpawnersCacheManager;
-import blizzard.development.spawners.database.storage.SpawnersData;
+import blizzard.development.spawners.utils.NumberFormat;
+import blizzard.development.spawners.utils.items.SkullAPI;
 import blizzard.development.spawners.utils.items.TextAPI;
 import org.bukkit.Material;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class RankingItems {
     private static RankingItems instance;
 
-    private final SpawnersCacheManager manager = SpawnersCacheManager.getInstance();
-
-    public ItemStack info(String id) {
-        final SpawnersData data = manager.getSpawnerData(id);
-
-        ItemStack item = new ItemStack(Material.SPAWNER);
+    public ItemStack spawners(String player, String type, int position, double amount) {
+        ItemStack item = SkullAPI.withName(new ItemStack(Material.PLAYER_HEAD), player);
         ItemMeta meta = item.getItemMeta();
-        meta.displayName(TextAPI.parse("§aInformações"));
-        meta.setLore(Arrays.asList(
+
+        String display = "§6Destaque #§l" + (position + 1);
+        List<String> lore = Arrays.asList(
                 "",
-                "§fGerais:",
-                "§8■ §7Dono:" + data.getNickname(),
-                "§8■ §7Spawners:" + data.getAmount(),
-                "§8■ §7Mobs:" + data.getMobAmount(),
-                "§8■ §7Drops:" + 1,
-                "",
-                "§fEncantamentos:",
-                "§8■ §7Velocidade:" + data.getSpeedLevel(),
-                "§8■ §7Sortudo:" + data.getLuckyLevel(),
-                "§8■ §7Experiente:" + data.getExperienceLevel(),
+                " §7Nome: §f" + player,
+                " §7" + type + ": §f" + NumberFormat.getInstance().formatNumber(amount),
                 ""
-        ));
-        meta.addItemFlags(ItemFlag.HIDE_ITEM_SPECIFICS, ItemFlag.HIDE_ATTRIBUTES);
+        );
 
+        meta.displayName(TextAPI.parse(display));
+        meta.setLore(lore);
         item.setItemMeta(meta);
         return item;
     }
 
-    public ItemStack enchantments() {
-        ItemStack item = new ItemStack(Material.ENCHANTING_TABLE);
+    public ItemStack nothing(int position) {
+        ItemStack item = new ItemStack(Material.BARRIER);
         ItemMeta meta = item.getItemMeta();
-        meta.displayName(TextAPI.parse("§5Encantamentos"));
-        meta.setLore(Arrays.asList(
-                "",
-                "§7Verifique os encantamentos",
-                "§7disponíveis para o spawners",
-                "",
-                "§5Clique para verificar."
-        ));
-
-        meta.addItemFlags(ItemFlag.HIDE_ITEM_SPECIFICS, ItemFlag.HIDE_ATTRIBUTES);
+        meta.displayName(TextAPI.parse("§6Destaque #§l" + (position + 1)));
+        meta.setLore(List.of("§7Nenhuma informação."));
         item.setItemMeta(meta);
         return item;
     }
 
-    public ItemStack friends() {
+    public ItemStack filter(String type) {
         ItemStack item = new ItemStack(Material.OAK_SIGN);
         ItemMeta meta = item.getItemMeta();
-        meta.displayName(TextAPI.parse("§eAmigos"));
-        meta.setLore(Arrays.asList(
-                "",
-                "§7Gerencie suas amizades e",
-                "§7suas respectivas permissões",
-                "",
-                "§eClique para gerenciar."
-        ));
-
-        meta.addItemFlags(ItemFlag.HIDE_ITEM_SPECIFICS, ItemFlag.HIDE_ATTRIBUTES);
+        meta.displayName(TextAPI.parse("§aMudar Categoria"));
+        meta.setLore(List.of("§7Clique para mudar para " + type));
         item.setItemMeta(meta);
         return item;
     }
 
-    public ItemStack ranking() {
-        ItemStack item = new ItemStack(Material.GOLD_INGOT);
+    public ItemStack back() {
+        ItemStack item = new ItemStack(Material.RED_DYE);
         ItemMeta meta = item.getItemMeta();
-        meta.displayName(TextAPI.parse("§6Destaques"));
-        meta.setLore(Arrays.asList(
-                "",
-                "§7Visualize os jogadores",
-                "§7que mais se destacam",
-                "",
-                "§6Clique para visualizar."
-        ));
-
-        meta.addItemFlags(ItemFlag.HIDE_ITEM_SPECIFICS, ItemFlag.HIDE_ATTRIBUTES);
+        meta.displayName(TextAPI.parse("§cVoltar"));
+        meta.setLore(List.of("§7Clique aqui para sair."));
         item.setItemMeta(meta);
         return item;
     }
